rosy: remove forced prop based DT2W selection
 can be easily configured via settings now

--- a/rootdir/init.rosy.rc
+++ b/rootdir/init.rosy.rc
@@ -45,13 +45,7 @@ on boot
     chmod 0700 /sys/devices/soc/soc:fpc1020/vendor
     chmod 0600 /data/misc/fpc/calibration_image.pndat
 
-# DT2W
-on property:dt2w.enabled=1
-    write /proc/gesture/onoff 1
-	
-on property:dt2w.enabled=0
-    write /proc/gesture/onoff 0	
-
+# DT2W node
     chmod 0660 /proc/gesture/onoff
     chown system system /proc/gesture/onoff
 
